--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,9 +1,8 @@
 {
     "$schema": "https://json.schemastore.org/web-manifest-combined.json",
-    "name": "qwik-project-name",
-    "short_name": "Welcome to Qwik",
+    "short_name": "Sample Works",
+    "name": "Sample Works by BijanProgrammer",
     "start_url": ".",
     "display": "standalone",
-    "background_color": "#fff",
-    "description": "A Qwik project app."
+    "background_color": "#fafafa"
 }
