--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,17 +4,18 @@ on:
         branches: [master]
 
 jobs:
-    deploy_job:
+    deploy:
         name: Deploy
         runs-on: ubuntu-latest
         steps:
             - name: Establish a Connection to Server and Update Website
               uses: appleboy/ssh-action@master
               with:
-                  host: 130.185.76.173
-                  username: root
+                  host: ${{secrets.SERVER_IP}}
+                  username: ${{secrets.SERVER_USERNAME}}
                   key: ${{secrets.SSH_KEY}}
-                  port: 22
+                  port: ${{secrets.SERVER_PORT}}
+                  script_stop: true
                   script: |
                       cd /repos/notes-sample-works
                       git fetch
