--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deployment Workflow
+name: Deploy
 on:
     push:
         branches: [master]
@@ -6,24 +6,13 @@ on:
 jobs:
     deploy:
         name: Deploy
-        runs-on: ubuntu-latest
+        runs-on: self-hosted
         steps:
-            - name: Establish a Connection to Server and Update Website
-              uses: appleboy/ssh-action@master
-              with:
-                  host: ${{secrets.SERVER_IP}}
-                  username: ${{secrets.SERVER_USERNAME}}
-                  key: ${{secrets.SSH_KEY}}
-                  port: ${{secrets.SERVER_PORT}}
-                  script_stop: true
-                  script: |
-                      cd /repos/notes-sample-works
-                      git fetch
-                      git checkout master
-                      git reset --hard HEAD
-                      git pull origin master
-                      npm i
-                      npm run build
-                      pm2 stop notes-sample-works
-                      pm2 start server/entry.express.js --name notes-sample-works
-                      pm2 save
+            - uses: actions/checkout@v2
+            - run: |
+                  npm i
+                  npm run build
+                  pwd
+                  pm2 stop notes-sample-works || true
+                  pm2 start server/entry.express.js --name notes-sample-works
+                  pm2 save
