[CI/CD][FIX] pm2 not found

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,6 +21,7 @@ jobs:
             - run: |
                   npm i
                   npm run build
+            - run: |
                   pm2 stop notes-sample-works || true
                   pm2 start server/entry.express.js --name notes-sample-works
                   pm2 save
